✨ feat: 增加docker使用文章

--- a/docs/knacks/vscode/自用配置.md
+++ b/docs/knacks/vscode/自用配置.md
@@ -18,6 +18,12 @@
   // 控制是否启用平滑插入动画
   "editor.cursorSmoothCaretAnimation": "on",
   "editor.find.addExtraSpaceOnTop": false,
+  // 用户代码片段是否显示
+  "editor.suggest.showSnippets": true,
+  // 启用 Tab 补全
+  "editor.tabCompletion": "on",
+  // 控制代码片段是否与其他建议一起显示及其排列的位置。
+  "editor.snippetSuggestions": "top",
   // 这个控制是否启用字体连字
   "editor.fontLigatures": "'ss01', 'ss02', 'ss03', 'ss06', 'zero'",
   // 控制编辑器是否应呈现垂直字形边距。字形边距最常用于调试。
@@ -65,6 +71,13 @@
       }
     ]
   },
+  // 控制资源管理器是否应以紧凑形式呈现文件夹。在此形式中，单个子文件夹将被压缩在组合的树元素中
+  "explorer.compactFolders": false,
+  // 如下是被vscode认为是分隔符的字符
+  // 我们在设置中搜索editor.wordSeparators
+  // 然后根据自己的需要删除不想要的分隔符即可
+  // 比如删除@，这样我们就可以直接选中less变量和装饰器如@xxx
+  "editor.wordSeparators": "`~#!@$%^&*()=+[{]}\\|;:'\",<>/?.",
   // 控制是否显示缩略图。
   "editor.minimap.enabled": false,
   // 在编辑器顶部的滚动过程中显示嵌套的当前作用域。
@@ -143,21 +156,21 @@
   "eslint.codeActionsOnSave.mode": "problems",
   "eslint.format.enable": true,
   "editor.codeActionsOnSave": {
-    //告诉ESLint插件在保存时运行
-    "source.fixAll.eslint": true,
-    // 保存时整理 import ，去掉没用的导包
-    "source.organizeImports": true
+    "source.fixAll.eslint": "explicit",
+    "source.organizeImports": "explicit"
   },
+  // 控制在编辑器中是否允许通过拖放来移动选中内容,改为false即可禁止拖动
+  "editor.dragAndDrop": false,
   // prettier格式化配置
   "editor.defaultFormatter": "esbenp.prettier-vscode", // 默认的代码格式化工具
   "prettier.requireConfig": false,
   "[vue]": {
-    "editor.defaultFormatter": "dbaeumer.vscode-eslint"
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   //针对共用的语言如JS、TS和JSX关闭文件保存自动格式化功能，通过eslint来做这件事
   "[javascript]": {
     "editor.formatOnSave": false,
-    "editor.defaultFormatter": "dbaeumer.vscode-eslint"
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "[javascriptreact]": {
     "editor.formatOnSave": false
@@ -166,7 +179,7 @@
     "editor.formatOnSave": false
   },
   // 颜色主题
-  "workbench.colorTheme": "Moegi Light",
+  "workbench.colorTheme": "Moegi Dark",
   // colorize-setting
   "colorize.enable_search_variables": false,
   "colorize.languages": [
@@ -192,13 +205,50 @@
   "[html]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-  "window.commandCenter": false,
   "workbench.editor.empty.hint": "hidden",
   "workbench.editor.pinnedTabsOnSeparateRow": true,
   "typescript.inlayHints.functionLikeReturnTypes.enabled": true,
   "typescript.inlayHints.parameterTypes.enabled": true,
   "typescript.inlayHints.parameterNames.enabled": "all",
-  "typescript.inlayHints.variableTypes.enabled": true
+  "typescript.inlayHints.variableTypes.enabled": true,
+  "diffEditor.ignoreTrimWhitespace": false,
+  "editor.inlayHints.enabled": "offUnlessPressed",
+  "workbench.editorAssociations": {
+    "*.tsx": "default"
+  },
+  "window.commandCenter": false,
+  "workbench.layoutControl.enabled": false,
+  "macros": {
+    // 自定义指令名称
+    "goConsole": [
+      {
+        //这个是第一个指令，复制选择的内容
+        "command": "editor.action.clipboardCopyAction",
+        "args": {
+          "text": ""
+        }
+      },
+      {
+        //这个是第二个指令，将光标设置到行末尾
+        "command": "cursorEnd",
+        "args": {
+          "text": ""
+        }
+      },
+      //第三个指令 ，插入代码段
+      {
+        "command": "editor.action.insertSnippet",
+        "args": {
+          "snippet": "\nconsole.log('[$RELATIVE_FILEPATH :$TM_LINE_NUMBER][ $CLIPBOARD ] >', $CLIPBOARD)$0"
+        }
+      }
+    ]
+  },
+  "path-intellisense.autoSlashAfterDirectory": true,
+  "path-intellisense.mappings": {
+    "@": "${workspaceRoot}/src"
+  }
 }
+
 
 ```
